@@ -15,5 +15,4 @@
     = form_for [@project.namespace.becomes(Namespace), @project, @push_rule] do |f|
       = form_errors(@push_rule)
 
-      = render "shared/push_rules_form", f: f,
-        prevent_committing_secrets_check: true
+      = render "shared/push_rules_form", f: f
