@@ -14,16 +14,16 @@
     %p.light.append-bottom-0
       Restrict commits by author (email) to existing GitLab users
 
-- if local_assigns.fetch(:prevent_committing_secrets_check, false)
-  .form-group
-    = f.check_box :member_check, class: "pull-left"
-    .prepend-left-20
-      = f.label :member_check, "Prevent committing secrets to git", class: "label-light append-bottom-0"
-      %p.light.append-bottom-0
-        We'll reject anything that is likely to contain secrets from your commits.
-        The list of things we reject is available in
-        %a{ href: '/' }
-          the documentation.
+
+.form-group
+  = f.check_box :prevent_secrets, class: "pull-left"
+  .prepend-left-20
+    = f.label :prevent_secrets, "Prevent committing secrets to Git", class: "label-light append-bottom-0"
+    %p.light.append-bottom-0
+      GitLab will reject any files that are likely to contain secrets.
+      The list of file names we reject is available in the
+      = link_to "documentation", help_page_path('push_rules/push_rules')
+      \.
 
 .form-group
   = f.label :commit_message_regex, "Commit message", class: 'label-light'
